fix z-index bug

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ hr {
     min-height: 100vh;
     max-height: 125%; 
     opacity: 20%;
-    z-index: 0;
+    z-index: -1;
     overflow-x: hidden;
     pointer-events: none;
 }
@@ -117,7 +117,7 @@ a:hover, a:active {
 #profile-topic {
     /* this is just so it maxes out all the time */
     /* position: absolute; */
-    min-width: 200px;
+    min-width: 250px;
     text-align: center;
 }
 
